# mcp-todo

./: CHANGELOG.md  README.md  pyproject.toml  release.sh
.github/workflows/: publish.yml
src/mcp_server_todo/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  service.py
src/todo/: __init__.py  __main__.py  cli.py  config.py  model.py  server.py  service.py
