[project]
name = "mcp-server-todo"
version = "0.0.1"
description = "A Model Context Protocol server providing tools to read, search, and manipulate todo repositories programmatically via LLMs"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["todo", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.7",
    "mcp>=1.0.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
]

[project.scripts]
mcp-server-todo = "mcp_server_todo.__main__:main"
todo = "mcp_server_todo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
